k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-briefings
  labels:
    name: my-briefings
