k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: football-transfers-service
  namespace: football-transfers
  labels:
    app: football-transfers-app
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30080
    protocol: TCP
  selector:
    app: football-transfers-app
